# manco-risk

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml  runbook.md
.github/: ISSUE_GUIDELINES.md
data/: README.md  fx_rates.csv  instruments.csv  prices.csv
docs/: ANNEX_IV_REPORTING.md  CONVENTIONS.md  FEATURE_PARITY_ROADMAP.md  LEVERAGE_METHODOLOGY_ROADMAP.md  LIQUIDITY_METHODOLOGY.md  LIQUIDITY_STRESS_LMT_DESIGN.md  MANAGEMENT_REPORTING.md  MARKET_DATA_DESIGN.md  PRIIPS_METHODOLOGY.md  PRIVATE_ASSET_ANALYTICS.md  PROJECT_SPEC.md  REFERENCE_DATA.md  REG_REFERENCE.md  UCITS_MONITORING.md
meta/: MRS-138_equity_stress_testing_linear_description.md  domain_note.md  environment_setup.md  equity_var_methodology.md  human_setup.md  leverage_methodology_roadmap.md  liquidity_analytics_mrs_roadmap.md  liquidity_analytics_stress_lmt_spike.md  liquidity_stress_lmt_calibration_design.md  market_data_design.md  project_spec.md  prompt_initial.txt  prototype_field_inventory.md  quantlib_derivative_pricing_spike.md  reg_reference.md  risk_methodology_limitations.md  setup.py
tests/: test_annex_iv_reporting.py  test_common_types.py  test_database_repositories.py  test_database_session.py  test_etl_position_loader.py  test_etl_position_mapper.py  test_etl_position_validator.py  test_infrastructure_analytics.py  test_infrastructure_sensitivity.py  test_management_report.py  test_market_data_csv_provider.py  test_market_data_derivative_schemas.py  test_market_data_schemas.py  test_priips_costs.py  test_priips_performance_scenarios.py  test_priips_sri_engine.py  test_priips_summary.py  test_private_debt.py  (+4 more)
(+262 files in other folders)
